cms/server/contest/static/cws_style.css
/* ... */
@media (min-width: 980px) and (max-width: 1199px) {
    .task_description .statement.many_statements .main_statements {
        width: 380px;
    }

    .task_description .statement.many_statements .all_statements {
        width: 300px;
    }
}

@media (min-width: 1200px) {
    .task_description .statement.many_statements .main_statements {
        width: 470px;
    }

    .task_description .statement.many_statements .all_statements {
        width: 370px;
    }
}

.task_description .statement.many_statements .main_statements {
    text-align: center;
}

.task_description .statement.many_statements .main_statements p {
    text-align: left;
}

.task_description .statement.many_statements .main_statements p:last-child {
    margin-bottom: 5px;
}

.task_description .statement.many_statements .main_statements a.btn {
    min-width: 50%;
    margin: 5px;
}

.task_description .statement.many_statements .all_statements {
    padding: 5px;
}

.task_description .statement.many_statements .all_statements div {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    overflow-y: auto;
    padding: 0;
}

.task_description .statement.many_statements .all_statements div ul {
    margin: 5px 5px 5px 25px;
}

/*** Compilation commands */

.compilation_command_cell {
    padding: 5px !important;
}

.compilation_command {
    display: block;
}

.compilation_command + .compilation_command {
    margin-top: 5px;
}

/*** Unread count */

#unread_count {
    float: right;
}

#unread_count.no_unread {
    display: none;
}

/*** Token rules */

td.token_rules p:last-child {
    margin-bottom: 0;
}

/*** Notifications */

.notifications {
    position: fixed;
    top: 60px;
    width: 0;
    right: 0;
    bottom: 0;
    overflow: visible;
    z-index: 1;
}

.notifications .notification {
    width: 160px;
    float: right;
    margin-right: 20px;
    clear: both;
}

/*** Task score */

.task_score_container {
    display: flex;
    justify-content: space-evenly;
    font-weight: bold;
}

.task_score {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 0;
}

.task_score .score img {
    margin-left: 5px;
}

.task_score.score_0 {
    background-color: hsla(0, 100%, 50%, 0.4);
}

.task_score.score_0_100 {
    background-color: hsla(60, 100%, 50%, 0.4);
}

.task_score.score_100 {
    background-color: hsla(120, 100%, 50%, 0.4);
}

/*** Submit a solution */

#submit_solution {
    margin-bottom: 20px;
}

#submit_solution form {
    margin-bottom: 0;
}

#submit_solution .control-group {
    margin-bottom: 0;
}

#submit_solution .control-group:last-of-type {
    margin-top: 10px;
}

#submit_solution .control-label {
    width: 100px;
    padding-top: 4px;
    margin-bottom: 4px;
}

#submit_solution .controls {
    margin-left: 110px;
}

#submit_solution input[type="file"] {
    height: auto;
    line-height: 18px;
}


/*** Submissions table */

.submission_list colgroup col.time,
.submission_list colgroup col.datetime {
    width: 1%;
}

.submission_list colgroup col.status {
    width: 20%;
}

.submission_list colgroup col.public_score {
    width: 20%;
}

.submission_list colgroup col.total_score {
    width: 20%;
}

.submission_list colgroup col.files {
    width: 10%;
}

.submission_list colgroup col.token {
    width: 10%;
}

.submission_list tbody tr td.no_submissions {
    font-style: italic;
    text-align: center !important;
}

.submission_list tbody tr td.time,
.submission_list tbody tr td.datetime {
    white-space: nowrap;
}

.submission_list tbody tr td.status .details {
    float: right;
    cursor: pointer;
}

.submission_list tbody tr td.files,
.submission_list tbody tr td.token {
    padding: 3px;
}

.submission_list tbody tr td.files .btn,
.submission_list tbody tr td.token .btn {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    width: 100%;
    white-space: nowrap;
}

.submission_list tbody tr td.token form {
    display: inline;
}

.submission_list td.public_score.undefined {
    color: #AAA;
}

.submission_list td.public_score.score_0 {
    background-color: hsla(0, 100%, 50%, 0.4);
}

.submission_list tr:hover td.public_score.score_0 {
    background-color: hsla(0, 100%, 50%, 0.5);
}

.submission_list td.public_score.score_0_100 {
    background-color: hsla(60, 100%, 50%, 0.4);
}

.submission_list tr:hover td.public_score.score_0_100 {
    background-color: hsla(60, 100%, 50%, 0.5);
}

.submission_list td.public_score.score_100 {
    background-color: hsla(120, 100%, 50%, 0.4);
}

.submission_list tr:hover td.public_score.score_100 {
    background-color: hsla(120, 100%, 50%, 0.5);
}

.submission_list td.total_score.undefined {
    color: #AAA;
}

.submission_list td.total_score.score_0 {
    background-color: hsla(0, 100%, 50%, 0.7);
}

.submission_list tr:hover td.total_score.score_0 {
    background-color: hsla(0, 100%, 50%, 0.8);
}

.submission_list td.total_score.score_0_100 {
    background-color: hsla(60, 100%, 50%, 0.7);
}

.submission_list tr:hover td.total_score.score_0_100 {
    background-color: hsla(60, 100%, 50%, 0.8);
}

.submission_list td.total_score.score_100 {
    background-color: hsla(120, 100%, 50%, 0.7);
}

.submission_list tr:hover td.total_score.score_100 {
    background-color: hsla(120, 100%, 50%, 0.8);
}

/*** Submission details */

#submission_detail .modal-body {
    position: relative;
    height: 400px;
}

#submission_detail .modal-body .loading {
    position: absolute;
    top: 50%;
    left: 0;
    right: 0;
    text-align: center;
    font-size: 16px;
    font-style: italic;
    margin-top: -16px; /* half the height of the image */
}

#submission_detail .modal-body .loading img {
    display: block;
    height: 32px;
    width: 32px;
    margin: 0 auto 12px;
}

#submission_detail .modal-body {
    overflow-y: scroll;
}

#submission_detail .modal-body h3 {
    margin-bottom: 15px;
}

#submission_detail .modal-body h3:not(:first-of-type) {
    margin-top: 30px;
}
/* ... */

